# openproof

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
apps/admin/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/app/dashboard/: page.tsx
apps/admin/lib/: api.ts
apps/admin/types/: index.ts
apps/client/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
apps/client/.github/: copilot-instructions.md
apps/client/.github/skills/frontend-design/: SKILL.md
apps/client/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/client/app/about/: page.tsx
apps/client/app/account/: page.tsx
apps/client/app/admin/: page.tsx
apps/client/app/api-docs/: page.tsx
apps/client/app/billing/: page.tsx
apps/client/app/dashboard/: page.tsx
apps/client/app/developers/: page.tsx
apps/client/app/documents/[id]/: page.tsx
apps/client/app/faq/: page.tsx
apps/client/app/forgot-password/: page.tsx
apps/client/app/history/: page.tsx
apps/client/app/login/: page.tsx
apps/client/app/p/[txid]/: page.tsx
apps/client/app/pricing/: page.tsx
apps/client/app/privacy/: page.tsx
apps/client/app/register/: page.tsx
apps/client/app/reset-password/: page.tsx
apps/client/app/signup/: page.tsx
apps/client/app/terms/: page.tsx
apps/client/app/verify/: page.tsx
apps/client/app/verify-email/: page.tsx
apps/client/components/auth/: auth-guard.tsx  auth-provider.tsx  auth-split-layout.tsx  guest-only-route.tsx  user-avatar.tsx  user-menu.tsx
apps/client/components/layout/: brand-logo.tsx  footer.tsx  header.tsx  index.ts  mobile-nav.tsx  site-shell.tsx
apps/client/components/legal/: legal-document.tsx
apps/client/components/marketing/: content-blocks.tsx  index.ts
apps/client/components/proof/: blockchain-proof-card.tsx  document-card.tsx  document-metadata-form.tsx  file-upload-dropzone.tsx  hash-comparison.tsx  hash-preview.tsx  index.ts  proof-process.tsx  timestamp-display.tsx  transaction-explorer-link.tsx  transaction-status.tsx  verification-badge.tsx
apps/client/components/ui/: button.tsx  card.tsx  code-block.tsx
apps/client/lib/: api.ts  auth-routing.ts  avatar.ts
apps/client/styles/: globals.css
apps/client/types/: index.ts
core/document/: Cargo.toml
core/document/src/: error.rs  lib.rs  model.rs
core/document/src/public/: events.rs  mod.rs
core/notarization/: Cargo.toml
core/notarization/src/: error.rs  lib.rs  primitives.rs  transaction_info.rs
dev/: STAGING_RUNBOOK.md  docker-compose.yml  invoke-staging-smoke.ps1  staging.env.example  start-staging-api.ps1
lib/authz/: Cargo.toml
lib/authz/src/: error.rs  lib.rs  permission.rs
lib/bitcoin-rpc/: Cargo.toml
lib/bitcoin-rpc/src/: adapter.rs  error.rs  lib.rs
openproof/api-server/: Cargo.toml
openproof/api-server/src/: auth.rs  blink.rs  config.rs  document_chain.rs  error.rs  lib.rs  mailer.rs  main.rs  rate_limit.rs  routes.rs  storage.rs
openproof/api-server/src/handlers/: account.rs  admin.rs  auth.rs  billing.rs  developers.rs  documents.rs  mod.rs  transactions.rs
openproof/api-server/tests/: http_hardening.rs
openproof/app/: Cargo.toml
openproof/app/migrations/: 20250323120000_init.sql  20260330000100_add_auth_tables.sql  20260330000200_add_api_keys.sql  20260330000300_add_billing_tables.sql  20260330000400_add_audit_events.sql  20260330000500_add_user_name.sql  20260331000100_billing_in_sats.sql  20260331000200_credit_price_per_credit.sql
openproof/app/src/: admin.rs  api_keys.rs  audit.rs  billing.rs  documents.rs  error.rs  lib.rs  outbox.rs  sessions.rs  users.rs
openproof/app/src/workers/: mod.rs
