[package]
name = "lib-bitcoin-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
core-notarization = { path = "../../core/notarization" }
bitcoin = { workspace = true }
corepc-client = { workspace = true }
corepc-types = "0.10"
minreq = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
