[package]
name = "openproof-api-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "openproof-api-server"
path = "src/main.rs"

[dependencies]
openproof-app = { path = "../app" }
core-document = { path = "../../core/document" }
core-notarization = { path = "../../core/notarization" }
lib-bitcoin-rpc = { path = "../../lib/bitcoin-rpc" }
lib-authz = { path = "../../lib/authz" }
async-trait = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
svix = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
