[package]
name = "openproof-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
core-document = { path = "../../core/document" }
core-notarization = { path = "../../core/notarization" }
lib-bitcoin-rpc = { path = "../../lib/bitcoin-rpc" }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
